Fix CSS for better UX on mobile

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,12 @@ main {
     font-family: 'Mulish', sans-serif;
 }
 
+@media (max-width: 480px) {
+    main {
+        width: 100%;
+    }
+}
+
 button {
     height: 40px;
     margin: 0;
